fix: whitespace i bund væk nu
closes #187

--- a/frontend/src/pages/Wizard/WizardPage.module.scss
+++ b/frontend/src/pages/Wizard/WizardPage.module.scss
@@ -637,7 +637,7 @@
 
 .summary {
   display: grid;
-  gap: var(--spacing-lg);
+  gap: var(--spacing-xs);
   align-content: start;
   color: var(--color-dark-500);
 }
@@ -713,8 +713,8 @@
 
 .summaryGroup {
   display: grid;
-  gap: var(--spacing-xs);
-  padding: var(--spacing-sm);
+  gap: var(--spacing-2xs);
+  padding: var(--spacing-xs) var(--spacing-sm);
   border-radius: var(--radius-xs);
   transition: background 200ms ease;
 
